--- a/BorgunRpgClient/BorgunRpgClient.csproj
+++ b/BorgunRpgClient/BorgunRpgClient.csproj
@@ -6,7 +6,7 @@
     <PackageReleaseNotes>Initial</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/Vettvangur/borgun-rpg-client</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>0.2.0</Version>
+    <Version>1.0.0</Version>
     <Authors>Vettvangur/Borgun</Authors>
     <Company>Borgun</Company>
   </PropertyGroup>
@@ -26,6 +26,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Polly" Version="7.2.1" />
   </ItemGroup>
 
 </Project>
